@@ -322,6 +322,8 @@ public:
     { saving_throw_ = saving_throw; };
   void set_spell_resistance( const Spell_Resistance& spell_resistance )
     { spell_resistance_ = spell_resistance; };
+  void set_description( const Spell_String_Element& description )
+    { description_ = description; };
 
   // doesn't realy work and is not necessary
   void add_element( const Spell_Element_Token&, const Spell_Element&);
